force-app/main/default/objects/nRetail__Asset__c/nRetail__Asset__c.object-meta.xml
<CustomObject>
    <description>The asset object stores information about an applicant&apos;s assets.</description>
    <label>Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>