force-app/main/default/objects/nRetail__Asset__c/fields/nRetail__Asset__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Asset__c</fullName>
    <description>This field is required and is a short description of the asset.</description>
    <inlineHelpText>Enter a short description of the asset.</inlineHelpText>
    <label>Asset</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>