force-app/main/default/objects/nRetail__Asset__c/fields/nRetail__Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Asset_Type__c</fullName>
    <description>This field is required and denotes the type of asset.</description>
    <label>Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Life Insurance Cash Value</fullName>
            </value>
            <value>
                <fullName>Mortgages and Contracts Held By You</fullName>
            </value>
            <value>
                <fullName>Other Assets</fullName>
            </value>
            <value>
                <fullName>Other Real Estate</fullName>
            </value>
            <value>
                <fullName>Personal Property</fullName>
            </value>
            <value>
                <fullName>Profit Sharing &amp; Pensions</fullName>
            </value>
            <value>
                <fullName>Retirement Accounts - Include IRA Acct.</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>