force-app/main/default/objects/nRetail__Asset__c/fields/nRetail__Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Estimated_Value__c</fullName>
    <description>This field is required and represents the value of the asset. This is a currency field.</description>
    <label>Estimated Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>