force-app/main/default/objects/nRetail__Asset__c/fields/nRetail__Loan__c.field-meta.xml
<CustomField>
    <fullName>nRetail__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and represents the loan this asset is related to.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>